[package]
name = "handins"
version = "0.1.0"
authors = ["Sam Lyon <sam.c.lyon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33.0"
reqwest = { version = "0.11.2", features = ["blocking", "cookies", "multipart"] }
rpassword = "5.0.1"
tokio = { version = "1.3.0", features = ["full"] }
select = "0.5.0"
chrono = "0.4"
simsearch = "0.2"